--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,21 +1,19 @@
 {
-    // Use IntelliSense to learn about possible Node.js debug attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
+    "version": "0.1.0",
     "configurations": [
+        // {
+        //     "name": "Launch localhost",
+        //     "type": "chrome",
+        //     "request": "launch",
+        //     "url": "http://localhost/mypage.html",
+        //     "webRoot": "/Users/josephchen/Documents/Code/RenewOC/RenewOC/index.html"
+        // },
         {
-            "type": "node",
+            "name": "Launch index.html (disable sourcemaps)",
+            "type": "chrome",
             "request": "launch",
-            "name": "Launch Program",
-            "program": "${file}"
+            "sourceMaps": false,
+            "file": "/Users/josephchen/Documents/Code/RenewOC/RenewOC/index.html"
         },
-        {
-            "type": "node",
-            "request": "attach",
-            "name": "Attach to Process",
-            "address": "localhost",
-            "port": 5858
-        }
     ]
 }
